[package]
name = "gpui_style_hot_reload"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello_world"       
path = "examples/hello_world.rs"
 
 
[dependencies]
gpui = "=0.2.1"
gpui-component = "*"
pjson = { git = "https://github.com/alanthinker/PJson.git", package = "pjson" }
lazy_static = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
notify = "*"
tracing = "*"  
tracing-subscriber = "*"
futures = "*"
