[package]
name = "layout_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui_style_hot_reload = { path = "../.." }
gpui = { workspace = true }
gpui-macros = { workspace = true }
gpui-component = { workspace = true }
pjson = { workspace = true }
alanthinker_dynamic_get_field_trait = { workspace = true }
alanthinker_dynamic_get_field_macro = { workspace = true } 
lazy_static = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
notify = "*"
tracing = "*"  
tracing-subscriber = "*"
futures = "*"
async-compat = "*"
syn = { version = "*", features = ["full", "derive"] }
async-io = "*"
reqwest = "*"
inventory = "*"